applications/crementation/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    meta.helm.sh/release-name: crementation
    meta.helm.sh/release-namespace: crementation
  labels:
    app.kubernetes.io/instance: crementation
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: crementation
    app.kubernetes.io/version: 1.16.0
    helm.sh/chart: crementation-0.1.0
  name: crementation
  namespace: crementation
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: crementation
      app.kubernetes.io/name: crementation
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        config.linkerd.io/proxy-cpu-request: 50m
        config.linkerd.io/proxy-memory-request: 64Mi
        config.linkerd.io/skip-outbound-ports: "3306"
      labels:
        app.kubernetes.io/instance: crementation
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: crementation
        app.kubernetes.io/version: 1.16.0
        helm.sh/chart: crementation-0.1.0
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app.kubernetes.io/name
                operator: In
                values:
                - crementation
            topologyKey: kubernetes.io/hostname
      containers:
      - image: maxi2/crementation-app:v8
        imagePullPolicy: Always
        command: ["/bin/sh", "-c"]
        args:
          - |
            sed -i '/DocumentRoot/a \ \t<Directory ${APACHE_DOCUMENT_ROOT}>\n\t\tAllowOverride All\n\t\tDirectoryIndex index.php index.html\n\t</Directory>' /etc/apache2/sites-available/000-default.conf
            a2enmod rewrite || true
            php artisan migrate --force || true
            chmod -R 777 /var/www/html/storage /var/www/html/bootstrap/cache || true
            exec apache2-foreground
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: http
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: crementation
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: http
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 64Mi
        securityContext: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: dockerhub-secret
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: crementation
      serviceAccountName: crementation
      terminationGracePeriodSeconds: 30
