applications/crementation/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: crementation
    meta.helm.sh/release-namespace: crementation
  labels:
    app.kubernetes.io/instance: crementation
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: crementation
    app.kubernetes.io/version: 1.16.0
    helm.sh/chart: crementation-0.1.0
  name: crementation
  namespace: crementation
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: crementation
    app.kubernetes.io/name: crementation
  sessionAffinity: None
  type: ClusterIP
